Fix main-container margin when editing - Now normalizes margin so that main-container does not change size between browse and edit modes. - Fixed long-standing regression where extra space was added for the toolbar when editing, even if view does not use a toolbar.

--- a/src/ui/layout/layout.scss
+++ b/src/ui/layout/layout.scss
@@ -98,6 +98,7 @@
       .l-shell__main-.l-shell__main-view-browse-bar {
         position: relative;
       }
+
       // Using `position: absolute` due to flex having repaint issues with the Time Conductor, #5247
       .l-shell__time-conductor,
       .l-shell__main-container {
@@ -108,6 +109,7 @@
         width: auto;
       }
 
+      // Using `position: absolute` due to flex having repaint issues with the Time Conductor, #5247
       .l-shell__main-container {
         top: $shellMainBrowseBarH + $interiorMarginLg;
         bottom: $shellTimeConductorH + $interiorMargin;
@@ -290,6 +292,7 @@
     flex: 1 1 auto !important;
     height: 100%; // Chrome 73 overflow bug fix
     overflow: auto;
+
     > * + * {
       margin-top: $interiorMargin;
     }
@@ -377,21 +380,24 @@
 }
 
 .is-editing {
-  .l-shell__main-container {
-    $m: 3px;
-    box-shadow:
-      $colorBodyBg 0 0 0 1px,
-      $editUIAreaShdw;
-    margin-left: $m;
-    margin-right: $m;
-    top: $shellToolBarH + $shellMainBrowseBarH + $interiorMarginLg !important;
+  .l-shell__main-container > .c-object-view {
+    box-shadow: $editUIAreaShdw;
 
     &[s-selected] {
-      // Provide a clearer selection context articulation for the main edit area
-      box-shadow:
-        $colorBodyBg 0 0 0 1px,
-        $editUIAreaShdwSelected;
+      // Provide a clearer selection context articulation for the
+      //background: orange !important;
+      box-shadow: $editUIAreaShdwSelected;
     }
+  }
+
+  .l-shell__main-container[s-selected] > .c-object-view {
+    // Provide a clearer selection context articulation for the
+    //background: purple !important;
+    box-shadow: $editUIAreaShdwSelected;
+  }
+
+  .l-shell__main-container.--has-toolbar {
+    top: $shellToolBarH + $shellMainBrowseBarH + $interiorMarginLg !important;
   }
 }
 
